<resources>
    <string name="app_name">Neenbo</string>
    <string name="Text_neenbo">NEENBO</string>
    <string name="text_accept">i accept the terms</string>
    <string name="text_DonotPost">We don\'t post anything on Facebook</string>
    <string name="Text_Terms_Of_Use">When you register, you agree to our Term of use</string>
    <string name="Text_privacy_policy">and Privacy Policy</string>
    <string name="Text_google">Login with Google</string>
    <string name="Text_email">Login with Email</string>
    <string name="Text_sms">Login with SMS</string>
    <string name="Text_facebook">Login with Facebook</string>
    <string name="Text_finish">Finish</string>
    <string name="text_enter_email">Enter Email</string>
    <string name="Text_enter_your_email">Enter your Email</string>
    <string name="text_firstname">FirstName</string>
    <string name="text_inform_gender">Inform Your gender</string>
    <string name="text_gender">Gender</string>
    <string name="text_date_of_birth">Date of birth</string>
    <string name="text_day">Day</string>
    <string name="text_month">Month</string>
    <string name="text_year">Year</string>
    <string name="Text_filter">Filter</string>
    <string name="text_show_me">Show me</string>
    <string name="text_men_or_women">Men or Women</string>
    <string name="text_city_state">City,State</string>
    <string name="text_18">18</string>
    <string name="text_to">to</string>
    <string name="text_35">35</string>
    <string name="text_Within">Within 50 km</string>
    <string name="text_50_km">50 Km</string>
    <string name="text_save">Save</string>
    <string name="text_encounters">Encounters</string>
    <string name="text_i_accept_the_terms">I accept the terms</string>
    <string name="encounter">Encounters</string>
    <string name="ravi_solanki_21">Ravi Solanki ,21</string>
    <string name="maharashtra_india">Maharashtra, India</string>
    <string name="liked_you">Liked you</string>
    <string name="preminum_like">PREMINUM LIKE</string>
    <string name="like_you">LIKE YOU</string>
    <string name="received_messages">Received messages</string>
    <string name="neenbo">Neenbo</string>
    <string name="message_of_neenbo_id">You earned 15 points per daily..</string>
    <string name="peopleNearby">People nearby</string>
    <string name="addMe">Add me</string>
    <string name="lisa">Lisa, 29</string>
    <string name="julie">Julie, 28</string>
    <string name="myAccount">My Account</string>
    <string name="selena">Selena, 24</string>
    <string name="Salman">Salman, 53</string>
    <string name="virat">Virat, 35</string>
    <string name="mark">Mark, 39</string>
    <string name="mumbai">Mumbai, Maharastra</string>
    <string name="name_of_user">Name of User</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="i_have_read">I have read all terms and condition.</string>
    <string name="freePoints">Free Points</string>
    <string name="popular_of_week">Popular of the week</string>
    <string name="premium">Start yours free trail of Neenbo Premium now</string>
    <string name="termConditionTop">Terms And Condition</string>
</resources>