<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Finish">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:textStyle="bold"
            android:paddingStart="@dimen/dp_60"
            android:text="@string/Text_finish"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back"
            android:layout_margin="@dimen/dp_20"
            />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvShowMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/text_enter_email"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFinish" />

    <EditText
        android:id="@+id/etManOrWomen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rectangle_bg"
        android:hint="@string/Text_enter_your_email"
        android:paddingStart="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/tvShowMe" />

    <TextView
        android:id="@+id/tvSeekingPeopeIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/text_firstname"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etManOrWomen" />

    <EditText
        android:id="@+id/etCityAndState"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rectangle_bg"
        android:hint="Write your Name"
        android:paddingStart="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/tvSeekingPeopeIn" />


    <TextView
        android:id="@+id/tvWithin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/text_gender"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCityAndState" />

    <EditText
        android:id="@+id/etRadius"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rectangle_bg"
        android:hint="@string/text_inform_gender"
        android:paddingStart="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/tvWithin" />


    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/text_date_of_birth"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRadius" />

    <LinearLayout
        android:id="@+id/DOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth">

        <EditText
            android:gravity="center"
            android:id="@+id/day"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_05"
            android:paddingBottom="@dimen/dp_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg"
            android:hint="@string/text_day"
            />

        <EditText
           android:gravity="center"
            android:id="@+id/month"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_05"
            android:paddingBottom="@dimen/dp_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg"
            android:hint="@string/text_month"
            />

        <EditText
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/year"
            android:paddingTop="@dimen/dp_05"
            android:paddingBottom="@dimen/dp_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg"
            android:hint="@string/text_year"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/encounter_rectangle_bg"
        android:paddingStart="@dimen/dp_30"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_30"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/text_encounters"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DOB" />
    
</androidx.constraintlayout.widget.ConstraintLayout>