<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filter">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:textStyle="bold"
            android:paddingStart="@dimen/dp_60"
            android:text="@string/Text_filter"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back"
            android:layout_margin="@dimen/dp_20"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/cardViewFilter" />

    <Button
        android:id="@+id/btnBackArrow_Of_FilterActivity"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/ic_baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvShowMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/text_show_me"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewFilter" />

    <EditText
        android:id="@+id/etManOrWomen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rectangle_bg"
        android:hint="@string/text_men_or_women"
        android:paddingStart="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/tvShowMe" />

    <TextView
        android:id="@+id/tvSeekingPeopeIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="Seeking people in"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etManOrWomen" />

    <EditText
        android:id="@+id/etCityAndState"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rectangle_bg"
        android:hint="@string/text_city_state"
        android:paddingStart="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/tvSeekingPeopeIn" />


    <TextView
        android:id="@+id/tvWithin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/text_Within"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearFilter" />

    <EditText
        android:id="@+id/etRadius"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rectangle_bg"
        android:gravity="center"
        android:hint="@string/text_50_km"
        app:layout_constraintTop_toBottomOf="@id/tvWithin" />


    <TextView
        android:id="@+id/tvFrom18to35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="From 18 to 35 years"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCityAndState" />

    <LinearLayout
        android:id="@+id/yearFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrom18to35">

        <EditText
            android:gravity="center"
            android:id="@+id/et18"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_05"
            android:paddingBottom="@dimen/dp_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg"
            android:hint="@string/text_18"
            />

        <EditText
            android:gravity="center"
            android:id="@+id/etTo"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_05"
            android:paddingBottom="@dimen/dp_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg"
            android:hint="@string/text_to"
            />

        <EditText
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/et35"
            android:paddingTop="@dimen/dp_05"
            android:paddingBottom="@dimen/dp_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg"
            android:hint="@string/text_35"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/encounter_rectangle_bg"
        android:paddingStart="@dimen/dp_30"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_30"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/text_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRadius" />

</androidx.constraintlayout.widget.ConstraintLayout>