<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ivNeenbo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:src="@drawable/neenbo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTermsOfUseOfMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/Text_Terms_Of_Use"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintTop_toBottomOf="@id/ivNeenbo" />

    <TextView
        android:layout_width="@dimen/dp_80"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/dp_50"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTermsOfUseOfMainActivity" />

    <TextView
        android:id="@+id/tvPrivacyPolicyOfMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_privacy_policy"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTermsOfUseOfMainActivity" />

    <TextView
        android:layout_width="@dimen/dp_80"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/dp_30"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrivacyPolicyOfMainActivity" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <TextView
        android:id="@+id/tvDonotPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_DonotPost"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="165dp" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/rectangle_bg"
        android:drawableStart="@drawable/ic_email"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/Text_email"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDonotPost" />

    <Button
        android:id="@+id/btnSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/rectangle_bg"
        android:drawableStart="@drawable/ic_call"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/Text_sms"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEmail" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:layout_marginTop="44dp"
        android:background="@drawable/rectangle_bg"
        android:drawableStart="@drawable/ic_search"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/Text_google"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrivacyPolicyOfMainActivity" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/rectangle_bg"
        android:drawableStart="@drawable/ic_facebook"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/Text_facebook"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle" />


</androidx.constraintlayout.widget.ConstraintLayout>